minikube/API-GATEWAY/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: apigateway
  name: apigateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apigateway
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: apigateway
    spec:
      containers:
        - image: docker.io/tayu78/my-typing-apigateway-2
          name: apigateway
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 4000
status: {}
