minikube/API-GATEWAY/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-apigateway
spec:
  rules:
    - host: go-api-gateway.com
      http:
        paths:
          - path: /
            backend:
              serviceName: apigateway
              servicePort: 4000
